Fix: missing role when getAuthorities