@@ -37,12 +37,14 @@ public enum Role {
                     MANAGER_CREATE
             )
     );
-   private final Set<Permission> permissions;
+    private final Set<Permission> permissions;
 
-   public List<SimpleGrantedAuthority> getAuthorities(){
-       return getPermissions()
-               .stream()
-               .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
-               .toList();
-   }
+    public List<SimpleGrantedAuthority> getAuthorities() {
+        var authorities = getPermissions()
+                .stream()
+                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+                .collect(Collectors.toList());
+        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
+        return authorities;
+    }
 }
